- input string converter, - new database, - subscription, subscriptionkeys models, - push notification, - delete image api, - deregister user api

--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -9,7 +9,7 @@
 
 <div class="centerForm">
     <!--"http://localhost:8080/login"-->
-    <form action="@http://localhost:8080/login" method="post">
+    <!--<form action="@http://localhost:8080/login" method="post">
         <div class="imgcontainer">
             <img src="src/img/pix.jpg" alt="Avatar" class="avatar">
         </div>
